--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -14,7 +14,7 @@
     "automation": "Automatisering",
     "appliances": "Apparater",
     "add_appliances": "Tilføj apparater.",
-    "appliance_things_to_do": "HUSKELISTE",
+    "appliance_things_to_do": "OPDAG MERE",
     "favorites": "FAVORIT",
     "more": "MERE",
     "rooms": "Værelser",
@@ -4660,5 +4660,8 @@
     "CL_SL_CM_energy_monitor": "GÅ TIL ENERGIMONITOR",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "Navn som D**CW, som D12CW, D16CW",
     "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_searching_device_near_you": "",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "Vin Management",
+    "CL_CF_HP_add_card_key": ""
 }
