--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -14,7 +14,7 @@
     "automation": "Automatización",
     "appliances": "Electrodomésticos",
     "add_appliances": "Añade electrodomésticos.",
-    "appliance_things_to_do": "COSAS QUE HACER",
+    "appliance_things_to_do": "DESCUBRE MÁS",
     "favorites": "FAVORITO",
     "more": "MÁS",
     "rooms": "Habitaciones",
@@ -4660,5 +4660,8 @@
     "CL_SL_CM_energy_monitor": "IR AL MONITOR DE ENERGÍA",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "Nombre como D**CW, como D12CW, D16CW",
     "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_searching_device_near_you": "",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "Gestión del vino",
+    "CL_CF_HP_add_card_key": ""
 }
