--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -14,7 +14,7 @@
     "automation": "予約",
     "appliances": "機器",
     "add_appliances": "機器追加",
-    "appliance_things_to_do": "運転設定",
+    "appliance_things_to_do": "さらに詳しく",
     "favorites": "お気に入り",
     "more": "更に",
     "rooms": "部屋",
@@ -4660,5 +4660,8 @@
     "CL_SL_CM_energy_monitor": "エネルギーモニターへ",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "名前は D**CW です（例: D12CW、D16CW）。",
     "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_searching_device_near_you": "",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "ワイン管理",
+    "CL_CF_HP_add_card_key": ""
 }
