--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -14,7 +14,7 @@
     "automation": "Automaatio",
     "appliances": "Laitteet",
     "add_appliances": "Lisää laitteet.",
-    "appliance_things_to_do": "ASIOITA TEHTÄVÄKSI",
+    "appliance_things_to_do": "LÖYDY LISÄÄ",
     "favorites": "SUOSIKKI",
     "more": "LISÄÄ",
     "rooms": "Tilat",
@@ -4660,5 +4660,8 @@
     "CL_SL_CM_energy_monitor": "SIIRRY ENERGY MONITOR -OHJELMAAN",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "Nimeä D**CW, kuten D12CW, D16CW",
     "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_searching_device_near_you": "",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "Viininhallinta",
+    "CL_CF_HP_add_card_key": ""
 }
