--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -14,7 +14,7 @@
     "automation": "Routine",
     "appliances": "Appareils",
     "add_appliances": "Ajouter des appareils",
-    "appliance_things_to_do": "CHOSES À FAIRE",
+    "appliance_things_to_do": "DÉCOUVREZ PLUS",
     "favorites": "FAVORIS",
     "more": "PLUS",
     "rooms": "Pièces",
@@ -4660,5 +4660,8 @@
     "CL_SL_CM_energy_monitor": "ACCÉDER AU MONITEUR D'ÉNERGIE",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "Nom comme D**CW, comme D12CW, D16CW",
     "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_searching_device_near_you": "",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "Gestion du vin",
+    "CL_CF_HP_add_card_key": ""
 }
