--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -14,7 +14,7 @@
     "automation": "Automatizálás",
     "appliances": "Készülékek",
     "add_appliances": "Adjon hozzá készüléket.",
-    "appliance_things_to_do": "TENNIVALÓK",
+    "appliance_things_to_do": "FEDEZZE FEL TÖBBET",
     "favorites": "KEDVENC",
     "more": "TÖBB",
     "rooms": "Szobák",
@@ -4660,5 +4660,8 @@
     "CL_SL_CM_energy_monitor": "LÉPJ AZ ENERGY MONITOR OLDALÁRA",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "Nevezze meg D**CW, például D12CW, D16CW",
     "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_searching_device_near_you": "",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "Borgazdálkodás",
+    "CL_CF_HP_add_card_key": ""
 }
