--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -14,7 +14,7 @@
     "automation": "Automasi",
     "appliances": "Peralatan",
     "add_appliances": "Tambah peralatan.",
-    "appliance_things_to_do": "PERKARA UNTUK DILAKUKAN",
+    "appliance_things_to_do": "TEMUI LEBIH LANJUT",
     "favorites": "KEGEMARAN",
     "more": "LAGI",
     "rooms": "Bilik",
@@ -4660,5 +4660,8 @@
     "CL_SL_CM_energy_monitor": "PERGI KE PEMANTAUAN TENAGA",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "Namakan sebagai D**CW, seperti D12CW, D16CW",
     "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_searching_device_near_you": "",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "Pengurusan Wain",
+    "CL_CF_HP_add_card_key": ""
 }
