--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -14,7 +14,7 @@
     "automation": "Automatizacija",
     "appliances": "Aparati",
     "add_appliances": "Dodajte kućne aparate",
-    "appliance_things_to_do": "STVARI KOJE MOŽETE RADITI",
+    "appliance_things_to_do": "ОТКРИТИ ВИШЕ",
     "favorites": "OMILJENI",
     "more": "VIŠE",
     "rooms": "Sobe",
@@ -4660,5 +4660,8 @@
     "CL_SL_CM_energy_monitor": "ИДИ НА ЕНЕРГЕТСКИ МОНИТОР",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "Име као Д**ЦВ, као Д12ЦВ, Д16ЦВ",
     "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_searching_device_near_you": "",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "Вине Манагемент",
+    "CL_CF_HP_add_card_key": ""
 }
