--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -14,7 +14,7 @@
     "automation": "Otomasyon",
     "appliances": "Cihazlar",
     "add_appliances": "Cihaz Ekle",
-    "appliance_things_to_do": "YAPILACAKLAR",
+    "appliance_things_to_do": "DAHA FAZLASINI KEŞFEDİN",
     "favorites": "FAVORİ",
     "more": "DAHA FAZLA",
     "rooms": "Odalar",
@@ -4660,5 +4660,8 @@
     "CL_SL_CM_energy_monitor": "ENERJİ İZLEYİCİSİNE GİT",
     "CL_CF_CS_tuya_dehumidifier_select_name_1": "D**CW olarak adlandırın, D12CW, D16CW gibi",
     "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
-    "CL_CF_CS_searching_device_near_you": ""
+    "CL_CF_CS_searching_device_near_you": "",
+    "CL_DV_HOB_step2_residual_reminder": "",
+    "CL_CF_HP_wine_management": "Şarap Yönetimi",
+    "CL_CF_HP_add_card_key": ""
 }
